--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -20,7 +20,7 @@
     <!-- Header -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{% url 'index' %}">
                 IssueTracker
             </a>
 
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="{% url 'tasks' %}">
                             Tasks
                         </a>
                     </li>
