--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -38,7 +38,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="{% url 'task_create' %}">
                             Add Task
                         </a>
                     </li>
