--- a/src/issue_tracker/templates/issue_tracker/includes/card.html
+++ b/src/issue_tracker/templates/issue_tracker/includes/card.html
@@ -1,13 +1,13 @@
 <div class="col-12 col-md-4 col-lg-3 fw-bold">
     <div class="border border-1 rounded-3 bg-white shadow p-3">
-        <div class="status d-flex gap-2 mb-2">
+        <div class="status d-flex flex-wrap gap-1 mb-2">
             Status:
-            {% for status in task.status.all %}
-                <h5>
+            {% for status in task.statuses.all %}
+                <h6>
                     <span class="badge bg-secondary">
                         {{ status.name }}
                     </span>
-                </h5>
+                </h6>
             {% endfor %}
         </div>
 
@@ -17,10 +17,10 @@
             </a>
         </div>
 
-        <div class="types d-flex gap-2">
+        <div class="types d-flex flex-wrap gap-1">
             Types:
-            {% for type in task.type.all %}
-                <h5>
+            {% for type in task.types.all %}
+                <h6>
                     {% if type.name == "Bug" %}
                         <span class="badge bg-warning">
                             {{ type.name }}
@@ -34,7 +34,7 @@
                             {{ type.name }}
                         </span>
                     {% endif %}
-                </h5>
+                </h6>
             {% endfor %}
         </div>
     </div>
