--- a/src/issue_tracker/templates/issue_tracker/task_detail.html
+++ b/src/issue_tracker/templates/issue_tracker/task_detail.html
@@ -80,7 +80,7 @@
                     </a>
 
                     <a type="button"
-                       class="btn btn-danger"
+                       class="btn btn-danger btn-sm"
                        data-bs-toggle="modal"
                        data-bs-target="#modal-record-{{ task.pk }}"
                     >
