--- a/src/issue_tracker/templates/issue_tracker/includes/card.html
+++ b/src/issue_tracker/templates/issue_tracker/includes/card.html
@@ -1,5 +1,5 @@
-<div class="col-12 col-md-4 col-lg-3 fw-bold">
-    <div class="border border-1 rounded-3 bg-white shadow p-3">
+<div class="col-12 col-md-4 fw-bold">
+    <div class="border border-1 rounded-3 bg-white shadow p-3 h-100">
 
         <div class="task mb-3">
             <a href="{% url 'task_detail' task.pk %}" style="word-wrap: break-word">
