--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -38,6 +38,12 @@
                     </li>
 
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'projects' %}">
+                            Projects
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'task_create' %}">
                             Add Task
                         </a>
