--- a/src/issue_tracker/templates/issue_tracker/includes/card.html
+++ b/src/issue_tracker/templates/issue_tracker/includes/card.html
@@ -45,7 +45,7 @@
                 Delete
             </a>
 
-            {% include 'issue_tracker/includes/modal.html' with obj=task%}
+            {% include 'issue_tracker/includes/modal.html' %}
         </div>
     </div>
 </div>
