--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -48,6 +48,12 @@
                             Add Task
                         </a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'project_create' %}">
+                            Add Project
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
