Добавить возможность регистраций пользователя
Сделать поле email обязательным
Поля first_name и last_name не должны быть пустыми

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -31,7 +31,7 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto gap-2">
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'tasks' %}">
                             Задачи
@@ -66,6 +66,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-light btn btn-success btn-sm" href="{% url 'login' %}">
                                 Войти
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light btn btn-success btn-sm" href="{% url 'register' %}">
+                                Зарегистрироваться
                             </a>
                         </li>
                     {% endif %}
