--- a/src/accounts/templates/accounts/register.html
+++ b/src/accounts/templates/accounts/register.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    Авторизация
+    Регистрация
 {% endblock %}
 
 {% block extra_css %}
@@ -13,11 +13,17 @@
         <div class="col-10 col-sm-8 col-xl-4">
             <form action="" method="POST">
                 {% csrf_token %}
-                {{ form }}
+                {{ form.non_field_errors }}
+
+                {% for field in form %}
+                    {{ field.label_tag }}
+                    {{ field }}
+                    {{ field.errors }}
+                {% endfor %}
 
                 <div class="d-grid gap-2">
                     <button type="submit" class="btn btn-primary w-100">
-                        Войти
+                        Регистрация
                     </button>
                 </div>
             </form>
