Создать пользователей с правами
Сделать фикстуры пользователей и данных
Поправить вид приложения

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -59,7 +59,7 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-light btn btn-danger btn-sm" href="{% url 'logout' %}">
-                                Выйти
+                                <u>{{ user.username }}</u>, Выйти
                             </a>
                         </li>
                     {% else %}
