--- a/src/issue_tracker/templates/issue_tracker/task_list.html
+++ b/src/issue_tracker/templates/issue_tracker/task_list.html
@@ -9,17 +9,13 @@
 {% endblock %}
 
 {% block nav_items %}
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'tasks' %}">
-            Задачи
-        </a>
-    </li>
-
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'projects' %}">
-            Проекты
-        </a>
-    </li>
+    {% if user.is_authenticated %}
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'task_create' %}">
+                Добавить задачу
+            </a>
+        </li>
+    {% endif %}
 {% endblock %}
 
 {% block content %}
