--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -32,31 +32,12 @@
 
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto gap-2">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'tasks' %}">
-                            Задачи
-                        </a>
-                    </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'projects' %}">
-                            Проекты
-                        </a>
-                    </li>
+                    {% block nav_items %}
+
+                    {% endblock %}
 
                     {% if user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'task_create' %}">
-                                Добавить Задачу
-                            </a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'project_create' %}">
-                                Добавить Проект
-                            </a>
-                        </li>
-
                         <li class="nav-item">
                             <a class="nav-link text-light btn btn-danger btn-sm" href="{% url 'logout' %}">
                                 <u>{{ user.username }}</u>, Выйти
